# optimization-pt3

./: .gitignore  CMakeLists.txt  LICENSE  README.md  data.json  run.bash  run.cmd  run.sh
report/: report.tex
src/: main.cpp  matrix.cpp
src/headers/: matrix.cpp  matrix.h  matrix.hpp  methods.hpp  north-west.cpp  north_west.cpp  north_west.hpp  parser.cpp  parser.hpp  russel.cpp  russel.hpp  vogel.cpp  vogel.hpp
tests/: Test-1.json  Test-2.json  Test-3.json
